--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "2e3c4037-312d-4650-b9c0-fcd0fc09aae4"
 authors = ["Bernard Brenyah"]
 version = "0.1.0"
 
+[deps]
+Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
+
 [compat]
 julia = "1"
 
