--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Faker = "0efc519c-db33-5916-ab87-703215c3906f"
 
 [targets]
-test = ["Test"]
+test = ["Test", "Faker"]
