--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,7 @@ authors = ["Bernard Brenyah"]
 version = "0.1.0"
 
 [deps]
-Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 
 [compat]
