--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 
 [compat]
+DataStructures = "0.18"
 julia = "1"
 
 [extras]
