--- a/Project.toml
+++ b/Project.toml
@@ -7,9 +7,11 @@ version = "0.1.0"
 CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
-ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 
 [compat]
+CircularArrays = "1"
+DataStructures = "0.18"
+OffsetArrays = "1"
 julia = "1"
 
 [extras]
