Cleaned up DictDB and added upstream Wakame pkg

--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SimString"
 uuid = "2e3c4037-312d-4650-b9c0-fcd0fc09aae4"
 authors = ["Bernard Brenyah"]
-version = "0.2.0"
+version = "0.3.0"
 
 [deps]
 CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
@@ -14,6 +14,7 @@ CircularArrays = "1"
 DataStructures = "0.18"
 OffsetArrays = "1"
 julia = "1"
+Wakame = "0.1"
 
 [extras]
 Faker = "0efc519c-db33-5916-ab87-703215c3906f"
