--- a/Project.toml
+++ b/Project.toml
@@ -1,23 +1,25 @@
 name = "SimString"
 uuid = "2e3c4037-312d-4650-b9c0-fcd0fc09aae4"
 authors = ["Bernard Brenyah"]
-version = "0.2.0"
+version = "0.3.0"
 
 [deps]
 CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
+Wakame = "4447db07-3941-47e2-90a2-965b7cb1b6ce"
 
 [compat]
 CircularArrays = "1"
 DataStructures = "0.18"
 OffsetArrays = "1"
 julia = "1"
+Wakame = "0.1"
 
 [extras]
 Faker = "0efc519c-db33-5916-ab87-703215c3906f"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test", "Faker", "Suppressor"]
